--- a/index.html
+++ b/index.html
@@ -216,12 +216,19 @@
                           style="width: 80%" aria-valuenow="80"
                           aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
+                       <span>React</span> <span class="pull-right">60%</span>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar"
+                          style="width: 60%" aria-valuenow="60"
+                          aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                       <span>Adobe Creative Cloud</span> <span class="pull-right">90%</span>
                       <div class="progress">
                         <div class="progress-bar" role="progressbar"
                           style="width: 90%" aria-valuenow="90"
                           aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
+                      
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -232,10 +239,14 @@
                         </h5>
                       </div>
                       <p class="lead">
-                     I'm currently furloughed from my job at Pennsylvania Chemicals. I decided it was
-                     time for a career change. I crave learning and new technology, with my degree in graphic 
-                     and web design, coding is the next step. I'm spending my time off taking a course at NuCamp Coding Bootcamp 
-                     for full stack and mobile developer.
+                      I'm a web developer that can build fast, responsive websites from the ground up.
+                      I strive to write clean and efficient code, along with pixel perfect images. My skill set allows me to design AND develope.
+                      </p>
+                      <p class="lead">
+                     I'm currently furloughed from my job at Pennsylvania Chemicals. I'm spending my time off taking a course at NuCamp Coding Bootcamp 
+                     for full stack and mobile developer. I crave learning and new technology, with my degree in graphic 
+                     and web design, coding is the next step to add to my current skill set. Coding allows me to do more than design a website, I can write code to incorporate
+                     forms and so much more. 
                       </p>
                       <p class="lead">
                       When I'm not coding I'm usually in search of the perfect cup of coffee, 
