--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div class="row">
                       <div class="col-sm-6 col-md-5">
                         <div class="about-img">
-                          <img src="assets/img/slmsite.jpg"
+                          <img src="assets/img/slm3.jpg"
                             class="img-fluid rounded b-shadow-a" alt="">
                         </div>
                       </div>
