--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <div class="container">
             <h1 class="display-9 color-d">Hello!</h1>
             <h3 class="intro-title mb-4"><small>I'm &nbsp; </small>  <i>Sherri&nbsp; </i> McMahon</h3>
-            <p class="intro-subtitle"><span class="text-slider-items">HTML Email
-                Designer,HTML Email Developer,Full Stack Developer</span><strong
+            <p class="intro-subtitle"><span class="text-slider-items">Email
+                Designer,Email Developer,Full Stack Developer</span><strong
                 class="text-slider"></strong></p>
             <p class="pt-3"><a class="btn btn-link btn js-scroll px-4"
                 href="#work" role="button"><i class="fa fa-chevron-down" style="font-size:48px;color:white"></i></a></p>
@@ -101,9 +101,9 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Email</h2>
+                      <h2 class="w-title">HTML Email</h2>
                       <div class="w-more">
-                        <span class="w-category">HTML Email Responsive </span> <br /><span
+                        <span class="w-category">Responsive Design </span> <br /><span
                           class="w-date">August 2020</span>
                       </div>
                     </div>
@@ -120,20 +120,20 @@
             <div class="col-md-4">
               <div class="work-box">
                   <div class="work-img">
-                    <img src="portfolio/images/out.jpg" alt="" class="img-fluid">
+                    <img src="knit/images/knit1.png" alt="" class="img-fluid">
                   </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Harold's Inn</h2>
+                      <h2 class="w-title">HTML Email</h2>
                       <div class="w-more">
-                        <span class="w-category">Web Site Design</span>  <br /><span
-                          class="w-date">August 2020</span>
+                        <span class="w-category">Landing Page</span>  <br /><span
+                          class="w-date">October 2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="portfolio/index.html" target="blank"> <span
+                        <a href="knit/index.html" target="blank"> <span
                             class="ion-ios-plus-outline"></span></a>
                       </div>
                     </div>
@@ -144,21 +144,21 @@
             <div class="col-md-4">
               <div class="work-box">
                   <div class="work-img">
-                    <img src="wireframe/harwf.jpg" alt="" class="img-fluid">
+                    <img src="landing/images/knit2.png" alt="" class="img-fluid">
                   </div>
                 
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Wire Frame</h2>
+                      <h2 class="w-title">HTML Email</h2>
                       <div class="w-more">
-                        <span class="w-category">Figma Wire Frame</span> <br /> <span
+                        <span class="w-category">Newsletter</span> <br /> <span
                           class="w-date">September 2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="wireframe/hrdwire.html" target="blank"> <span
+                        <a href="landing/index.htm" target="blank"> <span
                             class="ion-ios-plus-outline"></span></a>
                       </div>
                     </div>
@@ -191,7 +191,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Wedding</h2>
                       <div class="w-more">
-                        <span class="w-category">Landing Page</span> <br /><span
+                        <span class="w-category">Single Page Design</span> <br /><span
                           class="w-date">July 2020</span>
                       </div>
                     </div>
